--- a/webapp/style.css
+++ b/webapp/style.css
@@ -1,3 +1,10 @@
 html, body {
   height: 100%;
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(136,136,136,1) 35%, rgba(255,255,255,1) 100%);
+}
+
+.panel {
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(136,136,136,1) 35%, rgba(0,0,0,1) 100%);
 }
