--- a/webapp/style.css
+++ b/webapp/style.css
@@ -1,22 +1,29 @@
 html, body {
   height: 100%;
-  background: rgb(0,0,0);
-  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(136,136,136,1) 35%, rgba(255,255,255,1) 100%);
-  animation: change 10s ease-in-out infinite;
+
+
+  /*background: linear-gradient(270deg, #e9ec5e, #ff2278);*/
+
+  font-family: Gerana;
+  font-style: normal;
 }
 
-.content {
-
+@-webkit-keyframes grad {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes grad {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes grad {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 
-@keyframes change {
-  0%{
-    background-position: 0 50%;
-  }
-  50%{
-    background-position: 100% 50%;
-  }
-  100%{
-    background-position: 0 50%;
-  }
+.panel {
+  background-color: rgba(196, 196, 196, .5);
 }
