Finished the basic music library setup with 5 songs for each mood. Font change. Finish gradients.

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -4,7 +4,7 @@ html, body {
 
   /*background: linear-gradient(270deg, #e9ec5e, #ff2278);*/
 
-  font-family: Gerana;
+  font-family: 'Oxanium';
   font-style: normal;
 }
 
