--- a/webapp/style.css
+++ b/webapp/style.css
@@ -1,13 +1,15 @@
 html, body {
   height: 100%;
-
-
-  /*background: linear-gradient(270deg, #e9ec5e, #ff2278);*/
-
   font-family: 'Oxanium';
   font-style: normal;
 }
 
+.logo {
+  width: 20%;
+  height: 20%;
+  padding: 0;
+  margin: 0;
+}
 @-webkit-keyframes grad {
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
